# otel-extensions-pytest

./: README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: ci-tests.yml
otel_extensions_pytest/: __init__.py
tests/: conftest.py  pytest.ini  test_decorators.py  test_helpers.py  test_telemetry_options.py
