[metadata]
name = otel-extensions-pytest
description = pytest extensions for OpenTelemetry
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s4v4g3/otel-extensions-pytest
maintainer = Joe Savage
maintainer_email = joe.savage@gmail.com
version = 0.1.1
license = Apache-2.0
license_file = LICENSE
platforms = any
classifiers =
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = otel, opentelemetry, debug, pytest
project_urls =
    Source=https://github.com/s4v4g3/otel-extensions-pytest
    Tracker=https://github.com/s4v4g3/otel-extensions-pytest/issues

[options]
packages = find:
install_requires =
    opentelemetry-api
    opentelemetry-sdk
    otel-extensions>=0.1.1
    pytest>=6.2.0
    typing_extensions
python_requires = >=3.6
zip_safe = True

[options.packages.find]
exclude =
   example
   tests
   tools

[options.entry_points]
pytest11 = otel_extensions = otel_extensions_pytest

[options.extras_require]
test =
    coverage>=5

[options.package_data]
otel_extensions_pytest = py.typed

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
max-line-length=99

[coverage:report]
fail_under = 100
skip_covered = true
show_missing = true
omit =
    example/example.py

[coverage:html]
show_contexts = True
skip_covered = False
skip_empty = False

[coverage:paths]
source =
    src
    .tox*/*/lib/python*/site-packages
    .tox*/pypy*/site-packages
    .tox*\*\Lib\site-packages\
    */src
    *\src

[tool:pytest]
addopts = -ra --showlocals -vv
testpaths = tests
xfail_strict = True
junit_family = xunit2

[mypy]
python_version = 3.6
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
show_error_codes = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
warn_no_return = True
warn_return_any = True
implicit_reexport = False
strict_equality = True
warn_unused_configs = True
pretty = True
